@@ -91,6 +91,12 @@ Tolerate invalid input where possible.
 Warnings will be printed for syntax errors,
 but parsing will attempt to continue.
 Note that data may be lost when using this option!
+.It Cm variables
+Support parsing variable nodes.
+Variables can be written in SPARQL style, for example
+.Li ?var
+or
+.Li $var .
 .El
 .It Fl O Ar syntax
 Set an output syntax or option.
