@@ -1,0 +1,2 @@
+<http://example.org/s>
+	?pµ <http://example.org/o> .
