@@ -1,0 +1,1 @@
+<http://a.example/s> <http://a.example/p> <http://a.example/o> ?g .
