@@ -96,6 +96,7 @@ serd_set_input_option(const ZixStringView    name,
   static const InputOption input_options[] = {
     {"lax", SERD_READ_LAX},
     {"generated", SERD_READ_GENERATED},
+    {"variables", SERD_READ_VARIABLES},
     {NULL, SERD_READ_LAX},
   };
 
