@@ -37,9 +37,9 @@ print_usage(const char* const name, const bool error)
     "Read and write RDF syntax.\n"
     "Use - for INPUT to read from standard input.\n\n"
     "  -B BASE_URI  Base URI.\n"
-    "  -I SYNTAX    Input syntax (turtle/ntriples/trig/nquads),\n"
-    "               or flag (lax/generated).\n"
-    "  -O SYNTAX    Output syntax (empty/turtle/ntriples/nquads),\n"
+    "  -I SYNTAX    Input syntax (nquads/ntriples/trig/turtle),\n"
+    "               or flag (generated/lax/variables).\n"
+    "  -O SYNTAX    Output syntax (empty/nquads/ntriples/trig/turtle),\n"
     "               or flag (ascii/lax/terse/unresolved/unqualified).\n"
     "  -b BYTES     I/O block size.\n"
     "  -c PREFIX    Chop PREFIX from matching blank node IDs.\n"
